# Scical.jl

./: CMakeLists.txt  README.md
lib/: CMakeLists.txt  api.h  math.cpp  scical.h
src/: CMakeLists.txt  Scical.jl  _const.jl  _ffi.jl  astro.jl  atom_mass.jl  atomic.jl  formatter.jl  optics.jl  phy_const.jl  units.jl
